<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhoneLookup</string>
    <string name="list_item_os_icon">Operating System Icon</string>
    <string name="login_logo_image_description">Mobile Labs logo</string>
    <string name="login_password_edit_hint">Enter Password</string>
    <string name="login_password_label_text">Password</string>
    <string name="login_sign_in_button_text">Sign In</string>
    <string name="login_username_edit_hint">Enter Username</string>
    <string name="menu_item_log_out">Log Out</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_flag_secure">Flag Secure</string>
    <string name="product_details_description_label_text">Description:</string>
    <string name="product_details_description_placeholder">Description</string>
    <string name="product_details_icon_description">Operating System Icon</string>
    <string name="product_details_item_id_label_text">Product SKU #:</string>
    <string name="product_details_item_id_placeholder">Item ID</string>
    <string name="product_details_item_name_placeholder">Item Name</string>
    <string name="product_details_manufacturer_label_text">Manufacturer:</string>
    <string name="product_details_manufacturer_placeholder">Manufacturer</string>
    <string name="product_details_online_quantity_label_text">Online Quantity:</string>
    <string name="product_details_online_quantity_placeholder">Quantity</string>
    <string name="product_details_operating_system_label_text">Operating System:</string>
    <string name="product_details_operating_system_placeholder">Operating System</string>
    <string name="product_details_price_label_text">Price:</string>
    <string name="product_details_price_placeholder">Price</string>
    <string name="product_details_price_units">%1$s%2$s/Each</string>
    <string name="search_inventory_all_radio_button_text">All</string>
    <string name="search_inventory_in_stock_radio_button_text">In Stock</string>
    <string name="search_inventory_out_of_stock_radio_button_text">Out Of Stock</string>
    <string name="search_item_name_edit_hint">Enter Item Name</string>
    <string name="search_item_name_label_text">Item Name</string>
    <string name="search_manufacturer_label_text">MFGR</string>
    <string name="search_os_android_checkbox_text">Android</string>
    <string name="search_os_blackberry_checkbox_text">BlackBerry</string>
    <string name="search_os_ios_checkbox_text">iOS</string>
    <string name="search_os_windows_checkbox_text">Windows</string>
    <string name="search_search_button_text">Search</string>
    <string name="splash_image">Mobile Labs logo</string>
    <string name="login_username_label_text">Username</string>
    <string name="valid_password">demo</string>
    <string name="valid_username">mobilelabs</string>
    <string name="search_operating_system_label_text">Operating System</string>
    <string name="search_inventory_label_text">Inventory</string>
    <string name="list_item_item_name_placeholder">Item Name</string>
    <string name="list_item_item_id_placeholder">Item ID</string>
    <string name="list_item_carrier_placeholder">Carrier</string>
    <string name="list_item_in_stock_placeholder">In Stock</string>
    <string name="list_item_price_placeholder">Price</string>
    <string name="list_item_price_units_placeholder">00</string>
</resources>
