<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp">

        <ImageView
            android:id="@+id/product_details_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/product_details_icon_description" />

        <TextView
            android:id="@+id/product_details_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/product_details_item_name_placeholder"
            android:theme="@style/AppThemeProductDetailsTitle"
            app:layout_constraintStart_toEndOf="@+id/product_details_icon" />


        <TextView
            android:id="@+id/product_details_item_id_label"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/product_details_item_id_label_text"
            android:theme="@style/AppThemeProductDetailsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_icon" />

        <TextView
            android:id="@+id/product_details_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/product_details_item_id_placeholder"
            android:theme="@style/AppThemeProductDetailsText"
            app:layout_constraintStart_toEndOf="@id/product_details_item_id_label"
            app:layout_constraintTop_toBottomOf="@id/product_details_icon" />


        <TextView
            android:id="@+id/product_details_operating_system_label"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/product_details_operating_system_label_text"
            android:theme="@style/AppThemeProductDetailsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_item_id_label" />

        <TextView
            android:id="@+id/product_details_operating_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_details_operating_system_placeholder"
            android:theme="@style/AppThemeProductDetailsText"
            app:layout_constraintStart_toEndOf="@id/product_details_item_id_label"
            app:layout_constraintTop_toBottomOf="@id/product_details_item_id" />


        <TextView
            android:id="@+id/product_details_manufacturer_label"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/product_details_manufacturer_label_text"
            android:theme="@style/AppThemeProductDetailsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_operating_system_label" />

        <TextView
            android:id="@+id/product_details_manufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_details_manufacturer_placeholder"
            android:theme="@style/AppThemeProductDetailsText"
            app:layout_constraintStart_toEndOf="@id/product_details_manufacturer_label"
            app:layout_constraintTop_toBottomOf="@id/product_details_operating_system" />


        <TextView
            android:id="@+id/product_details_price_label"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/product_details_price_label_text"
            android:theme="@style/AppThemeProductDetailsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_manufacturer_label" />

        <TextView
            android:id="@+id/product_details_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_details_price_placeholder"
            android:theme="@style/AppThemeProductDetailsText"
            app:layout_constraintStart_toEndOf="@id/product_details_price_label"
            app:layout_constraintTop_toBottomOf="@id/product_details_manufacturer" />

        <TextView
            android:id="@+id/product_details_online_quantity_label"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/product_details_online_quantity_label_text"
            android:theme="@style/AppThemeProductDetailsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_price_label" />

        <TextView
            android:id="@+id/product_details_online_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_details_online_quantity_placeholder"
            android:theme="@style/AppThemeProductDetailsText"
            app:layout_constraintStart_toEndOf="@+id/product_details_online_quantity_label"
            app:layout_constraintTop_toBottomOf="@id/product_details_price_label" />

        <TextView
            android:id="@+id/product_details_description_label"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/product_details_description_label_text"
            android:theme="@style/AppThemeProductDetailsLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_online_quantity_label" />


        <TextView
            android:id="@+id/product_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_details_description_placeholder"
            android:theme="@style/AppThemeProductDetailsText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/product_details_description_label" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>