<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

        <ImageView
            android:id="@+id/list_item_os_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start|center_vertical"
            android:contentDescription="@string/list_item_os_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/list_item_item_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/list_item_item_name_placeholder"/>

            <TextView
                android:id="@+id/list_item_item_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="normal"
                android:text="@string/list_item_item_id_placeholder"/>

            <TextView
                android:id="@+id/list_item_carrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="normal"
                android:text="@string/list_item_carrier_placeholder"/>
        </LinearLayout>

        <TextView
            android:id="@+id/list_item_in_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="normal"
            android:text="@string/list_item_in_stock_placeholder"/>



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/list_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_price_placeholder"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/list_item_price_units"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_item_price_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="normal"
            android:text="@string/list_item_price_units_placeholder"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>